# JTE-ChessEngine

./: .gitignore  Bishop.h  Board.h  CMakeLists.txt  Evaluation.h  Knight.h  Makefile  Move.h  Piece.h  README.md  Rook.h  Zobrist.h  chessEngine  chessGame  chessSearch.h  chess_engine  chess_game  main.cpp  test_string.cpp
include/chess/: Board.h  Move.h
include/chess/evaluation/: Evaluation.h
include/chess/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
include/chess/rep/: Board.h  Move.h  Zobrist.h
include/chess/search/: Perft.h  chessSearch.h
src/: main.cpp
src/chess/evaluation/: Evaluation.cpp
src/chess/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/chess/representation/: Board.cpp  Move.cpp  Zobrist.cpp
src/chess/search/: Perft.cpp  chessSearch.cpp
src/chessGUI/: chessgui.cpp
